# persona_vectors

./: LICENSE  README.md  config copy.yaml  plan.md  pyproject.toml  requirements.txt
datasets/personas/: extraction_questions.jsonl
datasets/personas/archetypes/: hunter_s_thompson.jsonl  super_helpful_ai.jsonl  tom_the_redneck.jsonl
scripts/: create_persona.py  extract_assistant_axis.py  extract_persona.py  extract_safety_axis.py  generate_persona_dataset.py  generate_safety_dataset.py
src/: __init__.py  activation_extractor.py  cli.py  config.py  dataset_generator.py  model_wrapper.py  persona_manager.py  steering_engine.py  vector_math.py
vectors/: assistant_baseline.pt
vectors/personas/: hunter_s_thompson.pt  super_helpful_ai.pt  tom_the_redneck.pt
vectors/traits/: defiant.pt  malice.pt
web/: api.py  app.js  index.html  styles.css
